Rejected commit: wade

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -329,23 +329,23 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <td>
                                         </td>
                                         <td>
-                                            <input type="text" class="form-control form-filter input-sm" name="account">
+                                            <input type="text" class="form-control form-filter input-sm" id="account" name="account">
                                         </td>
                                         <td>
-                                            <input type="text" class="form-control form-filter input-sm" name="email">
+                                            <input type="text" class="form-control form-filter input-sm" id="email" name="email">
                                         </td>
                                         <td>
-                                            <input type="text" class="form-control form-filter input-sm" name="token">
+                                            <input type="text" class="form-control form-filter input-sm" id="token" name="token">
                                         </td>
                                         <td>
-                                            <select name="category" class="form-control form-filter input-sm">
+                                            <select id="category" name="category" class="form-control form-filter input-sm">
                                                 <option value="">Select...</option>
                                                 <option value="0">normal</option>
                                                 <option value="1">shop</option>
                                             </select>
                                         </td>
                                         <td>
-                                            <select name="status" class="form-control form-filter input-sm">
+                                            <select id="status" name="status" class="form-control form-filter input-sm">
                                                 <option value="">Select...</option>
                                                 <option value="0">normal</option>
                                                 <option value="1">invalid</option>
@@ -353,9 +353,9 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </td>
                                         <td>
                                             <div class="margin-bottom-5">
-                                                <input type="text" class="form-control form-filter input-sm margin-bottom-5 clearfix" name="entrydate_from" placeholder="From"/>
+                                                <input type="text" class="form-control form-filter input-sm margin-bottom-5 clearfix" id="from" name="from" placeholder="From"/>
                                             </div>
-                                            <input type="text" class="form-control form-filter input-sm" name="entrydate_to" placeholder="To"/>
+                                            <input type="text" class="form-control form-filter input-sm" id="to" name="to" placeholder="To"/>
                                         </td>
                                         <td>
                                             <div class="margin-bottom-5">
