--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1038,6 +1038,19 @@ License: You must have a valid license purchased only from themeforest(the above
 <script src="/js/metro/assets/global/plugins/respond.min.js"></script>
 <script src="/js/metro/assets/global/plugins/excanvas.min.js"></script>
 <![endif]-->
+<script data-main="main" src="/js/common/require.js"></script>
+<script>
+    require.config({
+        baseUrl: '/js',
+        paths: {
+            DateUtil: 'common/dateutil'
+        }
+    });
+
+    requirejs(['DateUtil'], function(d) {
+
+    });
+</script>
 <script src="/js/metro/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
 <script src="/js/metro/assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
 <!-- IMPORTANT! Load jquery-ui.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
